# ipython2cwl

./: .ci-config.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: quality.yml  test.yml
ipython2cwl/: __init__.py  cwltoolextractor.py  iotypes.py  repo2cwl.py  requirements_manager.py
tests/: test_cwltoolextractor.py  test_ipython2cwl_from_repo.py  test_requirements_manager.py  test_system_tests.py
